# mlflow-study

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CICD.md  Dockerfile  Dockerfile.mlflow  Makefile  QUICKSTART.md  README.md  TESTING.md  TODO.md  coverage.xml  create_test_image.py  docker-compose.yml  plan.md  pyproject.toml  pytest.ini
.github/workflows/: docker.yml  release.yml  test.yml
backup/mlflow_20251016_161503.db/0/: meta.yaml
backup/mlflow_20251016_161503.db/604094585392158958/: meta.yaml
backup/mlflow_20251016_161503.db/604094585392158958/1c895838388d41eda1965840d21ef139/: meta.yaml
backup/mlflow_20251016_161503.db/604094585392158958/1c895838388d41eda1965840d21ef139/metrics/: batch_train_accuracy  batch_train_loss  best_val_accuracy  epoch  learning_rate  train_accuracy  train_loss  val_accuracy  val_loss
backup/mlflow_20251016_161503.db/604094585392158958/1c895838388d41eda1965840d21ef139/tags/: mlflow.runName  mlflow.source.name
backup/mlflow_20251016_161503.db/604094585392158958/c383f5d383b14edeb5466803733645a2/: meta.yaml
backup/mlflow_20251016_161503.db/604094585392158958/c383f5d383b14edeb5466803733645a2/metrics/: batch_train_accuracy  batch_train_loss  epoch  learning_rate  train_accuracy  train_loss  val_accuracy  val_loss
backup/mlflow_20251016_161503.db/604094585392158958/c383f5d383b14edeb5466803733645a2/params/: model_trainable
backup/mlflow_20251016_161503.db/604094585392158958/c383f5d383b14edeb5466803733645a2/tags/: mlflow.runName
charts/mlflow/: Chart.yaml  README.md  values.yaml
charts/mlflow/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
charts/ray/: .helmignore  Chart.yaml  README.md  values.yaml
charts/ray/templates/: _helpers.tpl  head-deployment.yaml  head-service.yaml  hpa.yaml  worker-deployment.yaml
docs/: bentoml_serving_guide.md  cost_estimation.md  deployment_scripts.md  eks_infrastructure.md  migration_guide.md  mlflow_remote_setup.md  phase3_plan.md  ray_tune_guide.md  vscode_setup.md
scripts/: README.md
scripts/ops/: README.md  cleanup-all.sh
scripts/setup/: 00-bootstrap-backend.sh  00-setup-credentials.sh  01-verify-prerequisites.sh  02-deploy-terraform.sh  03-configure-kubectl.sh  04-install-controllers.sh  05-deploy-mlflow.sh  06-verify-deployment.sh
src/: __init__.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  dataset.py
src/models/: __init__.py  vision_model.py
src/serving/: __init__.py  bentofile.yaml  model_loader.py  service.py
src/training/: __init__.py  evaluate.py  train.py
src/tuning/: __init__.py  ray_tune.py
terraform/aws-eks/: .gitignore  README.md  iam.tf  main.tf  outputs.tf  rds.tf  s3.tf  terraform.tfvars.example  variables.tf
terraform/local/: README.md  main.tf  outputs.tf
tests/: __init__.py  conftest.py  test_config.py  test_data.py  test_e2e.py  test_mlflow_artifacts.py  test_models.py  test_ray_tune.py  test_training.py
